@@ -3,9 +3,6 @@ package org.gbif.predicate.query;
 import static org.gbif.api.util.IsoDateParsingUtils.ISO_DATE_FORMATTER;
 import static org.gbif.predicate.query.SQLColumnsUtils.isInterpretedUtcDateMilliseconds;
 
-import com.google.common.base.Strings;
-import com.google.common.base.Throwables;
-import com.google.common.collect.ImmutableList;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.time.Instant;
@@ -101,8 +98,7 @@ public class SQLQueryVisitor<S extends SearchParameter> implements QueryVisitor 
           OccurrenceSearchParameter.ACCEPTED_TAXON_KEY);
 
   private static final List<GadmTerm> GADM_GIDS =
-      ImmutableList.of(
-          GadmTerm.level0Gid, GadmTerm.level1Gid, GadmTerm.level2Gid, GadmTerm.level3Gid);
+      List.of(GadmTerm.level0Gid, GadmTerm.level1Gid, GadmTerm.level2Gid, GadmTerm.level3Gid);
 
   private StringBuilder builder;
 
@@ -1189,15 +1185,13 @@ public class SQLQueryVisitor<S extends SearchParameter> implements QueryVisitor 
           key, String.valueOf(range.lowerEndpoint().doubleValue()));
     }
 
-    ImmutableList.Builder<Predicate> predicates =
-        new ImmutableList.Builder<Predicate>()
-            .add(
-                new GreaterThanOrEqualsPredicate<S>(
-                    key, String.valueOf(range.lowerEndpoint().doubleValue())))
-            .add(
-                new LessThanOrEqualsPredicate<S>(
-                    key, String.valueOf(range.upperEndpoint().doubleValue())));
-    return new ConjunctionPredicate(predicates.build());
+    List<Predicate> predicates =
+        List.of(
+            new GreaterThanOrEqualsPredicate<S>(
+                key, String.valueOf(range.lowerEndpoint().doubleValue())),
+            new LessThanOrEqualsPredicate<S>(
+                key, String.valueOf(range.upperEndpoint().doubleValue())));
+    return new ConjunctionPredicate(predicates);
   }
 
   /**
@@ -1214,15 +1208,12 @@ public class SQLQueryVisitor<S extends SearchParameter> implements QueryVisitor 
           key, String.valueOf(range.lowerEndpoint().intValue()));
     }
 
-    ImmutableList<Predicate> predicates =
-        new ImmutableList.Builder<Predicate>()
-            .add(
-                new GreaterThanOrEqualsPredicate<S>(
-                    key, String.valueOf(range.lowerEndpoint().intValue())))
-            .add(
-                new LessThanOrEqualsPredicate<S>(
-                    key, String.valueOf(range.upperEndpoint().intValue())))
-            .build();
+    List<Predicate> predicates =
+        List.of(
+            new GreaterThanOrEqualsPredicate<S>(
+                key, String.valueOf(range.lowerEndpoint().intValue())),
+            new LessThanOrEqualsPredicate<S>(
+                key, String.valueOf(range.upperEndpoint().intValue())));
     return new ConjunctionPredicate(predicates);
   }
 
@@ -1241,7 +1232,7 @@ public class SQLQueryVisitor<S extends SearchParameter> implements QueryVisitor 
       log.error(
           "This error shouldn't occur if all visit methods are public. Probably a programming error",
           e);
-      Throwables.propagate(e);
+      throw new IllegalArgumentException(e);
     } catch (InvocationTargetException e) {
       log.info("Exception thrown while building the query", e);
       throw new QueryBuildingException(e);
@@ -1255,6 +1246,10 @@ public class SQLQueryVisitor<S extends SearchParameter> implements QueryVisitor 
   }
 
   private String getChecklistKey(String checklistKey) {
-    return !Strings.isNullOrEmpty(checklistKey) ? checklistKey : defaultChecklistKey;
+    return !isNullOrEmpty(checklistKey) ? checklistKey : defaultChecklistKey;
+  }
+
+  public static boolean isNullOrEmpty(String string) {
+    return string == null || string.isEmpty();
   }
 }
